# sipxecs

mak/: setup.mk.in
sipXcommons/: .classpath
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/acccode/: AuthCodeManagerImpl.java
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/common/: AbstractUser.java  User.java
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/phonebook/: PhonebookManager.java  PhonebookManagerImpl.java
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/setting/: BeanWithSettings.java
sipXconfig/web/context/WEB-INF/: sipXconfig-web.properties
sipXcounterpath/cmcprov/src/org/sipfoundry/sipxconfig/cmcprov/: LoginServlet.java
sipXopenfire/: common.am  configure.ac
sipXopenfire/config-plugin/: Makefile.am  pubspec.yaml  sipxplugin.beans.xml
sipXopenfire/config-plugin/plugin/: ChatRoomMgmt.html  ChatRoomMgmt.page  ChatRoomMgmt.properties  ChatRoomMgmtFull.html  IMFeature.html  InstantMessagingAdmin.html  InstantMessagingAdmin.properties  InstantMessagingPage.html  chat_room_mgmt.dart  chatroommgmt_test.json  edit_target.html  error.html  sipxconfig.dart  users_test.json
sipXopenfire/config-plugin/plugin/component/: edit_room.css  edit_room.dart  edit_room.html  user_picker.css  user_picker.dart  user_picker.html
sipXopenfire/config-plugin/plugin/lib/: chat_room.dart
sipXopenfire/config-plugin/plugin/route/: rooms_route.dart
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/openfire/: OpenfireConfigurationFile.java
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/persist/: ChatRoomWriteConverter.java
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: ChatRoomMgmt.java  ChatRoomMgmtApi.java  InstantMessagingAdmin.java  InstantMessagingPage.java  rooms.beans.xml
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/web/rest/: ChatRoom.java  ChatRoomController.java
sipXpolycom/etc/polycom/: mac-address-40.cfg.vm
(+5 files in other folders)
